--- a/promise_1/node1/package.json
+++ b/promise_1/node1/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index1.js",
+    "start": "node node_promise1.js",
+    "await": "node node_await1.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
